<resources>
    <string name="app_name">MiniMoneybox</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Full Name (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="email_address_error">Please enter a correct email address</string>
    <string name="password_error">Please enter a correct password</string>
    <string name="full_name_error">Please enter your full name</string>
    <string name="input_valid">Input is valid!</string>
    <string name="welcome_text">Hello %1$s!</string>
    <string name="total_plan_value">Total Plan Value: £%1$s</string>
    <string name="generic_error">Something went wrong. Please try again.</string>
    <string name="generic_error_name">Generic Error</string>
    <string name="product_plan_value">Plan Value: £%1$s</string>
    <string name="product_moneybox_value">Moneybox: £%1$s</string>
    <string name="add_10_button">Add £10</string>
    <string name="error_try_again">We\'re sorry but something went wrong. Please try again.</string>
    <string name="server_session_expired_name">Bearer token expired</string>
    <string name="moneybox_brand_image_description">MoneyBox brand image</string>
</resources>
