...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="Accounts"/>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Hello Errol!"
                android:textSize="@dimen/text_size_medium"
                android:padding="@dimen/padding_normal"
                android:lineSpacingExtra="8sp"
...
